--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.idea
+
 target/
 pom.xml.tag
 pom.xml.releaseBackup
@@ -9,6 +11,7 @@ buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
+.mvn
 
 # Eclipse m2e generated files
 # Eclipse Core
