--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,18 @@
                     </includes>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <mainClass>org.example.Main</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
+
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
